<resources>
    <string name="app_name">FireChatBot</string>

    <string name="welcome">Welcome To FireChat!</string>

    <string name="facebook_app_id">1663025317062080</string>
    <string name="fb_login_protocol_scheme">fb1663025317062080</string>
    
    <string name="API_KEY">AIzaSyCHu2hTDThO5t0ePuO9y9Zi2pq_kZCQE2w</string>

    <string name="welcome_message"><b>Enter your phone number</b> To create a FIRECHAT account, please verify your phone number \n or facebook account</string>

    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="required">Required</string>
    <string name="verify_phone_number_button">Verify Phone Number</string>
    <string name="sig_up_with_facebook">Sign up with Facebook</string>
    <string name="terms_of_services">By signing up, you agree to the FireChats Terms of services and Privacy Policy.</string>

    <string-array name="country_code">
        <item>+1(US)</item>
        <item>+66(Thailand)</item>
        <item>+91(India)</item>
        <item>+92(Pakistan)</item>

    </string-array>

    <string name="fail_authenticate">Failed to Authenticate</string>
    <string name="enter_valid_number">Please enter valid number</string>
    <string name="create_your_profile">Now Let"'"s create your profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="button_done">Done</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="sign_out">Sign out</string>
    <string name="user_created">User successfully created</string>

    <string name="failed_upload_image">Failed to upload image.</string>
    <string name="dont_see_what_looking">Don"'"t see who you"'"re looking for?</string>
    <string name="add_friends">Add Friends</string>
    <string name="contacts">Contacts</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string-array name="tabs">
        <item>Contacts</item>
        <item>Chat</item>
        <item>Settings</item>
    </string-array>

    <string name="search_hint">Search</string>

    <string name="edit_text_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="internet_unavailable">Internet Unavailable!</string>
    <string name="invite">Invite your Friends</string>

    <string name="send">Send</string>
    <string name="invite_contact">Invite</string>

    <string name="public_profile">public_profile</string>
    <string name="email">email</string>

    <string name="collapsed">Collapsed</string>
    <string name="expanded">Expanded</string>
    <string name="share_location">Share Location</string>
    <string name="share_status">Do you want to send your location \n to </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="month_ago"> month ago</string>
    <string name="months_ago"> months ago</string>
    <string name="year_ago"> year ago</string>
    <string name="week_ago"> week ago</string>
    <string name="weeks_ago"> weeks ago</string>
    <string name="day_ago"> day ago</string>
    <string name="days_ago"> days ago</string>
    <string name="hour_ago"> hour ago</string>
    <string name="hours_ago"> hours ago</string>
    <string name="min_ago"> min ago</string>
    <string name="mins_ago"> mins ago</string>
    <string name="just_now">Just now</string>
    <string name="secs_ago"> secs ago</string>
    <string name="exit">Press once again to exit!</string>
    <string name="sent">sent</string>
    <string name="seen">seen</string>
    <string name="sending">sending</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="max_image_selected">Image select limit exceed</string>
    <string name="image">image</string>
    <string name="last_active">Last active at </string>

</resources>
