<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d_sign_up_padding">


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/d_welcome_marginTop"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/s_welcome_size" />

        <TextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="4"
            android:paddingBottom="@dimen/d_welcome_message_paddingBottom"
            android:paddingTop="@dimen/d_welcome_message_paddingTop"
            android:text="@string/welcome_message"
            android:textColor="@color/black"
            android:textSize="@dimen/s_welcome_message_size" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_verify_button_marginTop"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_view"
                android:background="@color/silver" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d_ll_country_padding"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="@dimen/s_verify_size" />

            <Spinner
                android:id="@+id/s_country"
                android:layout_width="@dimen/d_spinner_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

            <View
                android:id="@+id/v_middle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_view"
                android:layout_below="@id/tv_country"
                android:background="@color/silver" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_middle"
                android:padding="@dimen/d_ll_country_padding"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/s_verify_size" />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_phone_number"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/required"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/d_ll_country_padding" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view"
            android:background="@color/silver" />

        <Button
            android:id="@+id/b_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_verify_button_marginTop"
            android:background="@drawable/shape_button_round"
            android:text="@string/verify_phone_number_button"
            android:textAllCaps="false"
            android:padding="@dimen/d_sign_up_verify_button_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/s_sign_up_verify_button_text" />

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_ll_country_padding"
            android:text="@string/terms_of_services"
            android:textSize="@dimen/s_terms_of_services" />

        <ProgressBar
            android:id="@+id/pb_progressbar"
            android:layout_width="@dimen/d_signup_progress_bar_size"
            android:layout_height="@dimen/d_signup_progress_bar_size"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/f_sign_up_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/d_sign_up_padding"
            android:layout_marginEnd="@dimen/d_sign_up_padding"
            android:layout_marginBottom="@dimen/d_welcome_marginTop"
            android:background="@drawable/shape_button_facebook"
            android:padding="@dimen/d_contact_profile_name_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/d_fb_signup_drawable_padding"
                android:drawableStart="@drawable/facebook"
                android:gravity="center"
                android:text="@string/sig_up_with_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/s_create_profile_size" />
        </FrameLayout>

        <View
            android:id="@+id/v_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_view"
            android:layout_above="@id/f_sign_up_facebook"
            android:background="@color/silver"
            android:layout_marginBottom="@dimen/d_welcome_marginTop"/>

    </RelativeLayout>


</LinearLayout>
