<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog_corners">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/d_dialog_layout_marginStart"
        android:layout_marginEnd="@dimen/d_dialog_layout_marginStart"
        android:paddingTop="@dimen/d_dialog_layout_padding"
        android:paddingBottom="@dimen/d_dialog_layout_padding">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_popup_icon"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_location"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="@dimen/d_dialog_share_padding"
            android:textSize="@dimen/s_dialog_share_location_size"/>
        <TextView
            android:id="@+id/tv_share_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/share_status"
            android:textColor="@color/black"
            android:maxLines="3"
            android:padding="@dimen/d_dialog_share_status_padding"
            android:gravity="center"
            android:textSize="@dimen/s_dialog_share_status_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="@dimen/s_dialog_yes_size"
            android:gravity="center"
            android:padding="@dimen/d_dialog_yes_padding"
            android:background="@color/light_gray"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/tv_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="@dimen/s_dialog_yes_size"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="@dimen/d_dialog_yes_padding"
            android:background="@color/purple"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>