<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <TextView
        android:id="@+id/tv_create_your_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_sign_up_padding"
        android:text="@string/create_your_profile"
        android:textSize="@dimen/s_create_profile_size" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdv_profile_image"
        android:layout_width="@dimen/d_profile_image_size"
        android:layout_height="@dimen/d_profile_image_size"
        android:layout_gravity="center_horizontal"
        app:roundAsCircle="true"
        app:placeholderImage="@mipmap/ic_launcher_round"
        android:layout_marginTop="@dimen/d_welcome_message_paddingTop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/d_sign_up_padding">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/s_welcome_message_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/last_name"
                android:textColor="@color/black"
                android:textSize="@dimen/s_welcome_message_size" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/b_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_welcome_message_paddingTop"
            android:background="@drawable/shape_button_round"
            android:text="@string/button_done"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:paddingTop="@dimen/d_verify_button_marginTop"/>

    </LinearLayout>

</LinearLayout>
